# wazuh-mcp

./: .dockerignore  .env.example  .gitignore  .hadolint.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  generate-indexer-certs.yml  pyproject.toml
.github/workflows/: devsecops.yml
config/wazuh_cluster/: wazuh_manager.conf
config/wazuh_indexer/: internal_users.yml  wazuh.indexer.yml
docs/: README.md  architecture.md  claude-integration.md  configuration.md  development.md  devsecops.md  installation.md  makefile.md  security.md  soc.md  tools.md  troubleshooting.md
scripts/: check_tools.py  setup-claude-desktop.sh  wait-for-wazuh.sh
src/wazuh_mcp/: __init__.py  audit.py  auth.py  circuit_breaker.py  client.py  config.py  sanitize.py  server.py
src/wazuh_mcp/api/: __init__.py  wazuh_indexer.py
src/wazuh_mcp/tools/: __init__.py  active_response.py  active_response_soc.py  agents.py  ciscat.py  cluster.py  decoders.py  events.py  experimental.py  groups.py  lists.py  logtest.py  (+12 more)
tests/: conftest.py  test_active_response.py  test_active_response_soc.py  test_agents.py  test_audit.py  test_auth_live.py  test_circuit_breaker.py  test_ciscat.py  test_client_retry.py  test_cluster.py  test_decoders.py  test_events.py  test_experimental.py  test_groups.py  test_indexer_client.py  test_lists.py  test_logtest.py  test_manager.py  test_mitre.py  test_observability.py  test_overview.py  test_rootcheck.py  test_rules.py  test_sanitize.py  test_sca.py  test_security.py  test_security_config.py  test_soc_alerts.py  test_soc_vulnerabilities.py  test_syscheck.py  test_syscollector.py  test_unit.py
