[project]
name = "wazuh-mcp"
version = "0.1.0"
description = "Wazuh Security Platform MCP Server"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-env>=1.1",
]

[project.scripts]
wazuh-mcp = "wazuh_mcp.server:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require a live Wazuh instance (Docker)",
]
